<resources>
    <string name="app_name">AlarmClockCompanion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_devices">You haven\'t connected any devices yet</string>
    <string name="title_activity_clocks">ClocksActivity</string>
    <string name="nav_clocks">Clocks</string>
    <string name="nav_alarms">Alarms</string>
    <string name="nav_devices">Nearby Devices</string>
    <string name="menu_utils">Utils</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Send feedback</string>
    <string name="wifi_password">WiFi Password</string>
    <string name="blank_for_no_password">Leave blank for no password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="wifi_network">WiFi Network</string>
    <string name="pairing_image">Pairing Image</string>
    <string name="connect_device_button">Connect Device</string>
    <string name="device_name_default">Device Name</string>
    <string name="wifi_checkbox">WiFi</string>
    <string name="wifi_ssid_default">SSID</string>
    <string name="signed_in_checkbox">Signed In</string>
    <string name="signedin_name_default">name</string>
    <string name="email_default">email</string>
    <string name="uptime_default">uptime</string>
    <string name="registered_checkbox">Registered</string>
    <string name="setup_wifi_button">Setup WiFi</string>
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="reboot_button">Reboot</string>
    <string name="pair_device_title">Pair your device</string>
    <string name="press_device_description">Press the Pair button on the device to begin pairing.</string>
    <string name="reset_button">Factory Reset</string>
    <string name="volume">Volume:</string>
</resources>
