<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clocks"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_clocks" />
        <item
            android:id="@+id/nav_alarms"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_alarms" />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_devices" />
    </group>

    <item android:title="@string/menu_utils">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_logout" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_help" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_feedback" />
        </menu>
    </item>

</menu>
